bin/testsuite/tests/compiler/src/errors/compiler583.swg
#global testerror "Err0232"
func(op: string, op: s32) toto() {}
